Removes suggested exercises

--- a/tutorial-tensorflow-1-sobel.ipynb
+++ b/tutorial-tensorflow-1-sobel.ipynb
@@ -144,8 +144,7 @@
     "    strides=[1, 1, 1, 1], \n",
     "    padding=\"SAME\",\n",
     "    name = 'sobel_vertical_output')\n",
-    "print sobel_vertical_output\n",
-    "\n"
+    "print sobel_vertical_output"
    ]
   },
   {
@@ -192,8 +191,7 @@
     "my_input_image = fixtures.camera()\n",
     "import matplotlib.pyplot as plt\n",
     "plt.imshow(my_input_image, cmap=\"gray\") # (επιστρέφει όρισμα το οποίο μπορούμε να αγνοήσουμε)\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
@@ -216,7 +214,7 @@
     "import numpy as np\n",
     "cameraman_filtered = sess.run(sobel_mag, feed_dict={input_image: np.reshape(my_input_image, [1, 512, 512])})\n",
     "plt.imshow(np.reshape(cameraman_filtered, [512, 512]), cmap=\"gray\") # (επιστρέφει όρισμα το οποίο μπορούμε να αγνοήσουμε)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -253,18 +251,7 @@
     "\n",
     "cameraman_filtered_vertical = sess.run(sobel_vertical_output, feed_dict={input_image: np.reshape(my_input_image, [1, 512, 512])})\n",
     "plt.imshow(np.reshape(cameraman_filtered_vertical, [512, 512]), cmap=\"gray\") # (επιστρέφει όρισμα το οποίο μπορούμε να αγνοήσουμε)\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Ασκήσεις\n",
-    "\n",
-    "1. (*) Υλοποιήστε το Λαπλασιάνο φίλτρο χρησιμοποιώντας το tensorflow. \n",
-    "2. (*) Να αλλάξετε τον κώδικα ώστε η εικόνα να δίνεται από τον χρήστη από τον δίσκο και να γράφεται στον δίσκο. Η είσοδος και η έξοδος να δίνονται σαν ορίσματα από γραμμή έντολής.\n",
-    "3. (***) Χρησιμοποιήστε την υλοποίηση του Tensorflow για javascript (https://github.com/transcranial/keras-js) για να κατασκευάσετε ένα απλό φίλτρο της επιλογής σας σαν in-browser εφαρμογή."
+    "plt.show()"
    ]
   }
  ],
@@ -277,7 +264,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
